--- a/about-me/blog-layout/story.html
+++ b/about-me/blog-layout/story.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-  </head>
+    <head>
+        <meta charset="UTF-8">
+        <title>title</title>
+    </head>
   <body>
+
+      <header>
+
+          <p>Story on the latest trends on web development</p>
+
+          
+
+      </header>
+
   
   </body>
 </html>
